k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abrahamic-js

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: abrahamic-js
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: abrahamic-js/backend:latest
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: postgres-storage
              mountPath: /app/db
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: abrahamic-js
spec:
  selector:
    app: backend
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: abrahamic-js
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: abrahamic-js/frontend:latest
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: abrahamic-js
spec:
  selector:
    app: frontend
  ports:
    - port: 5173
      targetPort: 5173
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abrahamic-js-ingress
  namespace: abrahamic-js
spec:
  ingressClassName: nginx
  rules:
    - host: abrahamic-js.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5173
